tests/accept/ambig.lc
{-# LANGUAGE NoImplicitPrelude #-}

data Tuple2 a b = Tuple2 a b

h f y z = x
  where
    -- x :: 
    x = (\(a, b) -> f a b) y

