tests/reject/typesigctx.lc
{-# LANGUAGE NoImplicitPrelude #-}

data X = X

class Show a where show :: a -> X

show' :: X
show' = show


